# xnat-interfile

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
.github/workflows/: test.yaml
python/: environment.yml  interfile_2_xnat.py  populate_datatype_fields.py  pyproject.toml  requirements.txt  tmp.py
python/src/xnat_interfile/: fetch_datasets.py  interfile_2_xnat.py  populate_datatype_fields.py
python/tests/: conftest.py  interfile_2_xnat.py  populate_datatype_fields.py  requirements.txt  test_server.py
src/main/java/org/nrg/xnat/interfile/: InterfileXnatPlugin.java
src/main/java/org/nrg/xnat/mrd/: InterfileXnatPlugin.java
src/main/java/org/nrg/xnat/stir/: StirXnatPlugin.java
src/main/resources/schemas/interfile/: interfile.xsd
src/main/resources/schemas/interfile/display/: interfile_petLmScanData_display.xml
src/main/resources/schemas/mrd/: interfile.xsd
src/main/resources/schemas/mrd/display/: interfile_itfScanData_display.xml
src/main/resources/schemas/stir/: interfile.xsd  stir.xsd
src/main/resources/schemas/stir/display/: stir_petLmScanData_display.xml
